--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,5 +11,10 @@
     <string name="select_placemark_image">Select placemark image</string>
     <string name="change_placemark_image">Change placemark image</string>
     <string name="button_location">Set Location</string>
-    <string name="title_activity_map">MapActivity</string>
+    <string name="title_activity_map">Map</string>
+    <string name="menu_deletePlacemark">Delete</string>
+    <string name="title_activity_placemark_maps">Map of All Placemarks </string>
+    <string name="placemark_image_placeholder">Placemark Imagee</string>
+    <string name="placemark_title_placeholder">Placemark Title</string>
+    <string name="placemark_description_placeholder">Placemark Description</string>
 </resources>
